--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
 		<mockito.version>1.9.5</mockito.version>
 		<junit.version>4.12</junit.version>
 		<axis2.version>1.6.3</axis2.version>
-		<soapui.version>5.1.1</soapui.version>
+		<soapui.version>5.1.3</soapui.version>
 	</properties>
 
 	<dependencies>
@@ -79,6 +79,20 @@
 						<version>3.10-FINAL</version>
 					</dependency>
 				</dependencies>
+<!-- 				<executions> -->
+<!--                     <execution> -->
+<!--                         <phase>test</phase> -->
+<!--                         <goals> -->
+<!--                             <goal>test</goal> -->
+<!--                         </goals> -->
+<!--                         <configuration> -->
+<!--                             <projectFile>simple-test-soapui-project.xml</projectFile> -->
+<!--                             <projectProperties> -->
+<!--                                 <value>message=Hello World!</value> -->
+<!--                             </projectProperties> -->
+<!--                         </configuration> -->
+<!--                     </execution> -->
+<!--                 </executions> -->
 			</plugin>
 			<plugin>
 				<groupId>org.apache.axis2</groupId>
