--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,17 @@
 			<version>${soapui.version}</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.ant</groupId>
+			<artifactId>ant</artifactId>
+			<version>1.9.6</version>
+		</dependency>
+		<dependency>
+			<groupId>org.hamcrest</groupId>
+			<artifactId>hamcrest-all</artifactId>
+			<version>1.3</version>
+		</dependency>
+
 	</dependencies>
 	<build>
 		<finalName>HotelReservation</finalName>
@@ -79,20 +90,20 @@
 						<version>3.10-FINAL</version>
 					</dependency>
 				</dependencies>
-<!-- 				<executions> -->
-<!--                     <execution> -->
-<!--                         <phase>test</phase> -->
-<!--                         <goals> -->
-<!--                             <goal>test</goal> -->
-<!--                         </goals> -->
-<!--                         <configuration> -->
-<!--                             <projectFile>simple-test-soapui-project.xml</projectFile> -->
-<!--                             <projectProperties> -->
-<!--                                 <value>message=Hello World!</value> -->
-<!--                             </projectProperties> -->
-<!--                         </configuration> -->
-<!--                     </execution> -->
-<!--                 </executions> -->
+				<!-- <executions> -->
+				<!-- <execution> -->
+				<!-- <phase>test</phase> -->
+				<!-- <goals> -->
+				<!-- <goal>test</goal> -->
+				<!-- </goals> -->
+				<!-- <configuration> -->
+				<!-- <projectFile>simple-test-soapui-project.xml</projectFile> -->
+				<!-- <projectProperties> -->
+				<!-- <value>message=Hello World!</value> -->
+				<!-- </projectProperties> -->
+				<!-- </configuration> -->
+				<!-- </execution> -->
+				<!-- </executions> -->
 			</plugin>
 			<plugin>
 				<groupId>org.apache.axis2</groupId>
